corrected the padding around the buttons in the navbar and spacing between .

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -16,7 +16,7 @@
 .nav-link {
   text-decoration: none;
   color: #1e1e1e;
-  margin-right: 3rem;
+  margin-right: 4rem;
   line-height: 1.6;
 }
 
@@ -42,7 +42,7 @@
 .sign-up-button {
   background-color: #8bc34a;
   color: #1e1e1e;
-  padding: 15px;
+  padding: 10px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
